Logo fails to load in some browsers missing language.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://design.artsdatabanken.no/script/header.js"></script> 
     <script src="https://design.artsdatabanken.no/script/footer.js"></script> 
     <script src="doi-lookup.js"></script> 
-    <script src="language.js"></script> 
+    <!-- <script src="language.js"></script>  -->
     <script src="doi.js"></script> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -22,8 +22,10 @@
 <header class="header">   
     <div class="width-adjuster">
         <a href="https://artsdatabanken.no" class="header-logo">
-            <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973" class="normal">
-            <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20978" class="mobile">
+            <!-- <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973" class="normal"> -->
+            <!-- <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20978" class="mobile"> -->
+            <img  alt="Artsdatabanken" src="artsdatabanken_files_20973.png" class="normal">
+            <img  alt="Artsdatabanken" src="artsdatabanken_files_20978.png" class="mobile">
         </a>
            <button id="navbar-mobile" class='material-icons'>menu</button>
         <nav id="headermenu" class="hide"></nav>
