--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                 Her kommer en magisk tekst om lisens
                             </span>
                             <span class="nn">
-                                Her kjem ein magisk tekst om lisens
+                                Her kjem ein magisk tekst på nynorsk om lisens
                             </span>
                             <span class="en">
                                 License info..
