--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <span id="ingress.taxons"></span>
 
                             <span class="nb lang-show"> og er et øyeblikksbilde fra da datasettet ble opprettet.</span>
-                            <span class="nn"> og er eit augeblinksbilete frå da datasettet blei oppretta.</span>
+                            <span class="nn"> og er eit augeblinksbilete frå då datasettet vart oppretta.</span>
                             <span class="en"> and is a snapshot of when the dataset was created. </span>
 
                         </p>
@@ -418,13 +418,13 @@
                                 </span>
                             </h2>
                             <span class="nb lang-show">
-                                Her kommer en magisk tekst om lisens
+                                Datasett frå Artskart vert delt under vilkåra som er gitt i Norsk lisens for offentlige data (NLOD) lisens
                             </span>
                             <span class="nn">
-                                Her kjem ein magisk tekst på nynorsk om lisens
+                                Datasett frå Artskart vert delt under vilkåra som er gitt i Norsk lisens for offentlige data (NLOD)
                             </span>
                             <span class="en">
-                                License info..
+                                Data from NBIC Species Map Service are made available under the conditions in Norwegian Licence for Open Government Data (NLOD)
                             </span>
                             <br/>
                     </div>
