--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                                 </span>
                             </h2>
                             <span class="nb lang-show">
-                                Datasett frå Artskart vert delt under vilkåra som er gitt i Norsk lisens for offentlige data (NLOD) lisens
+                                Datasett fra Artskart blir delt under vilkårene som er gitt i Norsk lisens for offentlige data (NLOD)
                             </span>
                             <span class="nn">
                                 Datasett frå Artskart vert delt under vilkåra som er gitt i Norsk lisens for offentlige data (NLOD)
