--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@
                                 </span>
                             </h2>
                             <span class="nb lang-show">
-                                Datasett fra Artskart blir delt under vilkårene som er gitt i <a href="https://data.norge.no/nlod/no/" target="_blank"></a>Norsk lisens for offentlige data (NLOD)</a>
+                                Datasett fra Artskart blir delt under vilkårene som er gitt i <a href="https://data.norge.no/nlod/no/" target="_blank">Norsk lisens for offentlige data (NLOD)</a>
                             </span>
                             <span class="nn">
                                 Datasett frå Artskart vert delt under vilkåra som er gitt i <a href="https://data.norge.no/nlod/no/" target="_blank">Norsk lisens for offentlige data (NLOD)</a>
                             </span>
                             <span class="en">
-                                Data from NBIC Species Map Service are made available under the conditions in <a href="https://data.norge.no/nlod/en/" target="_blank"></a>Norwegian Licence for Open Government Data (NLOD)</a>
+                                Data from NBIC Species Map Service are made available under the conditions in <a href="https://data.norge.no/nlod/en/" target="_blank">Norwegian Licence for Open Government Data (NLOD)</a>
                             </span>
                             <br/>
                     </div>
