links, crumbs (ish), lang, shortcut-group

--- a/artskart.html
+++ b/artskart.html
@@ -33,8 +33,8 @@
                         <span lang="en">Artsdatabanken DOI</span>
                     </a>
                 </li>
-                <li>
-                    <a href="">
+                <li > <!-- TODO: make not link when not loaded-->
+                    <a href="artskart.html">
                         <span lang="nb">Datasett fra Artskart</span>
                         <span lang="nn">Datasett frå Artskart</span>
                         <span lang="en">Dataset from Artskart</span>
@@ -70,7 +70,7 @@
                     <span lang="nn">Oversikt</span>
                     <span lang="en">Overview</span>
                 </h2>
-                <div id="find.doi"></div>
+                <div id="find.doi" class="shortcut-group"></div>
             </div>
             <div class="ingress">
                 <p>
