--- a/artskart.html
+++ b/artskart.html
@@ -368,9 +368,14 @@
                         corrected or removed should any errors be detected.
                     </span>
                     <br/>
-                    <span id="a.appender.nb" lang="nn"></span>
-                    <span id="a.appender.nb" lang="nb"></span>
-                    <span id="a.appender.en" lang="en"></span>
+
+                    <a id="artskartLink" class="shortcut-link"> 
+                        <span class='material-icons'>launch</span>
+                        <span id="a.appender.nb" lang="nn">Se oppdatert utvalg</span>
+                        <span id="a.appender.nb" lang="nb">Se oppdatert utvalg</span>
+                        <span id="a.appender.en" lang="en">Se updated selection</span>
+                        </a>
+                    
                 </p>
             </div>
 
