cleaned up contributor appender a tiny bit

--- a/artskart.html
+++ b/artskart.html
@@ -265,44 +265,30 @@
 
             <div class="section">
                 <h2>
-                    <span lang="nn">Datagrunnlag</span>
+                    <span lang="nb">Datagrunnlag</span>
                     <span lang="nn">Datagrunnlag</span>
                     <span lang="en">Data elements</span>
                 </h2>
                 <p>
-                    <span lang="nb">
-                        Datasettet er satt sammen av
-                    </span>
-                    <span lang="nn">
-                        Datasettet er satt samen av
-                    </span>
-                    <span lang="en">
-                        The dataset is a collection of
-                    </span>
+                    <span lang="nb">Datasettet er satt sammen av</span>
+                    <span lang="nn">Datasettet er satt samen av</span>
+                    <span lang="en">The dataset is a collection of</span>
+
                     <span id="Descriptions.count">-</span>
-                    <span lang="nb">
-                        element fra
-                    </span>
-                    <span lang="nn">
-                        elementar frå
-                    </span>
-                    <span lang="en">
-                        elements from
-                    </span>
+
+                    <span lang="nb">element fra</span>
+                    <span lang="nn">elementar frå</span>
+                    <span lang="en">elements from</span>
+
                     <span id="Nr.Sources"></span>
 
-                    <span lang="nb">
-                        dataleverandør<span class="contributor-plural">er</span>.
-                    </span>
-                    <span lang="nn">
-                        dataleverandør<span class="contributor-plural">ar</span>.
-                    </span>
-                    <span lang="en">
-                        contributor<span class="contributor-plural">s</span>.
-                    </span>
-
-                    <span id="doi.appender"></span>
+                    <span lang="nb">dataleverandør<span class="contributor-plural">er</span>.</span>
+                    <span lang="nn">dataleverandør<span class="contributor-plural">ar</span>.</span>
+                    <span lang="en">contributor<span class="contributor-plural">s</span>.</span>
                 </p>
+                <ul id="doi.appender" class="contributor-list">
+
+                </ul>
             </div>
         </div>
 
@@ -312,8 +298,7 @@
                 <span lang="nb">Siter datasettet</span>
                 <span lang="en">Cite dataset</span>
             </h2>
-            <p>
-                
+            <p>                
                 <span id="citationPublisher"></span> (<span id="citationYear"></span>). <span id="citationCreator"></span>. 
                 <span id="citationDataset"></span> <span id="citationURL"></span>
                 accessed via artsdatabanken.no on <span id="citationDate"></span>.
