show/hide for direct id/classes now removed from css

--- a/artskart.html
+++ b/artskart.html
@@ -189,29 +189,29 @@
 
                     <span class="tags_absence tags_case_5">
                         <span lang="nb">
-                            Utvalget inkluderer <b>kun</b> observasjoner av typene "ikke funnet" og "ikke gjenfunnet".
+                            Utvalget inkluderer kun observasjoner av typene "ikke funnet" og "ikke gjenfunnet".
                         </span>
                         <span lang="nn">
-                            Utvalet inkluderer <b>kun</b> observasjoner av typane "ikkje funnet" og "ikkje gjenfunnet".
+                            Utvalet inkluderer kun observasjoner av typane "ikkje funnet" og "ikkje gjenfunnet".
                         </span>
                         <span lang="en">
-                            The selection <b>only</b> includes observations of the types "absent" and "not recovered".
+                            The selection only includes observations of the types "absent" and "not recovered".
                         </span>
                     </span>
 
                     <span class="tags_absence tags_case_6 tags_case_7">
                         <span lang="nb">
-                            Utvalget inkluderer <b>kun</b> observasjoner av typen
+                            Utvalget inkluderer kun observasjoner av typen
                                 <span class="tags_absence tags_case_6">"ikke funnet"</span>.
                                 <span class="tags_absence tags_case_7">"ikke gjenfunnet"</span>.
                         </span>
                         <span lang="nn">
-                            Utvalet inkluderer <b>kun</b> observasjoner av typen
+                            Utvalet inkluderer kun observasjoner av typen
                                 <span class="tags_absence tags_case_6">"ikkje funnet"</span>.
                                 <span class="tags_absence tags_case_7">"ikkje gjenfunnet"</span>.
                         </span>
                         <span lang="en">
-                            The selection <b>only</b> includes observations of the type
+                            The selection only includes observations of the type
                                 <span class="tags_absence tags_case_6">"absent"</span>.
                                 <span class="tags_absence tags_case_7">"not recovered"</span>.
                         </span>
