Translations for JS added

--- a/artskart.html
+++ b/artskart.html
@@ -126,23 +126,16 @@
                 </p>
             </div>
             <div class="section inlinesection">
-
                 <div class="img-container">
                     <span id="img.appender" class="sectionimage"></span>
                     <span id="img.source" class="img-source-container"></span>
                 </div>
-
+                <!--
                 <p class="absence">
                     <span class="tags_absence tags_case_1">
-                        <span lang="nb">
-                            Eventuelle observasjoner av typene "ikke funnet" og "ikke gjenfunnet" er utelatt fra utvalget.
-                        </span>
-                        <span lang="nn">
-                            Eventuelle observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet" er utelatt fra utvalet.
-                        </span>
-                        <span lang="en">
-                            Any observations of case "absent" and "not recovered" are excluded from the selection.
-                        </span>
+                        <span lang="nb">Eventuelle observasjoner av typene "ikke funnet" og "ikke gjenfunnet" er utelatt fra utvalget.</span>
+                        <span lang="nn">Eventuelle observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet" er utelatt fra utvalet. </span>
+                        <span lang="en">Any observations of case "absent" and "not recovered" are excluded from the selection.</span>
                     </span>
 
                     <span class="tags_absence tags_case_2 tags_case_3">
@@ -176,27 +169,15 @@
                     </span>
 
                     <span class="tags_absence tags_case_4">
-                        <span lang="nb">
-                            I tillegg til observasjoner av arten, inkluderer utvalget observasjoner av typene "ikke funnet" og "ikke gjenfunnet".
-                        </span>
-                        <span lang="nn">
-                            I tillegg til observasjonar av arten, inkluderer utvalet observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet".
-                        </span>
-                        <span lang="en">
-                            In addition to observations of the species, the selection includes observations of the types "absent" and "not recovered"
-                        </span>
+                        <span lang="nb">I tillegg til observasjoner av arten, inkluderer utvalget observasjoner av typene "ikke funnet" og "ikke gjenfunnet".</span>
+                        <span lang="nn">I tillegg til observasjonar av arten, inkluderer utvalet observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet".</span>
+                        <span lang="en">In addition to observations of the species, the selection includes observations of the types "absent" and "not recovered".</span>
                     </span>
 
                     <span class="tags_absence tags_case_5">
-                        <span lang="nb">
-                            Utvalget inkluderer kun observasjoner av typene "ikke funnet" og "ikke gjenfunnet".
-                        </span>
-                        <span lang="nn">
-                            Utvalet inkluderer kun observasjoner av typane "ikkje funnet" og "ikkje gjenfunnet".
-                        </span>
-                        <span lang="en">
-                            The selection only includes observations of the types "absent" and "not recovered".
-                        </span>
+                        <span lang="nb">Utvalget inkluderer kun observasjoner av typene "ikke funnet" og "ikke gjenfunnet".</span>
+                        <span lang="nn">Utvalet inkluderer kun observasjoner av typane "ikkje funnet" og "ikkje gjenfunnet".</span>
+                        <span lang="en">The selection only includes observations of the types "absent" and "not recovered".</span>
                     </span>
 
                     <span class="tags_absence tags_case_6 tags_case_7">
@@ -216,41 +197,16 @@
                                 <span class="tags_absence tags_case_7">"not recovered"</span>.
                         </span>
                     </span>
-                </p>
-
-                <p>
-                    <span id="Descriptions.taxons"></span>
-                </p>
-
-                <p>
-                    <span id="tags_geometry">
-                        <span lang="nb"> Utvalget begrenses av et valgt polygon. </span>
-                        <span lang="nn"> Utvalet begrenses av eit valgt polygon. </span>
-                        <span lang="en"> The selection is limited by a selected polygon. </span>
-                    </span>
-                    <!--
-                        // TODO: Find better way to show polygon. Hidden untill such a time arrives.
-                        <span id="Descriptions.geometry"></span>
-                    -->
-                </p>
-
-                <p>
-                    <span id="tags_area">
-                        <span lang="nb"> Utvalget begrenses geografisk av </span>
-                        <span lang="nn"> Utvalet begrenses geografisk av </span>
-                        <span lang="en"> The selection is limited geographically by </span>
-                    </span>
-                    <span id="Descriptions.area"></span>
-                </p>
-
-                <p>
-                    <span id="tags_other">
-                        <span lang="nb"> Utvalget begrenses av </span>
-                        <span lang="nn"> Utvalet begrenses av </span>
-                        <span lang="en"> The selection is limited by </span>
-                    </span>
-                    <span id="Descriptions.other"></span>
-                </p>
+                </p> -->
+                
+                <div id="tags_other">
+                    <h2 >
+                        <span lang="nb"> Filtere </span>
+                        <span lang="nn"> Filtere </span>
+                        <span lang="en"> Filters </span>
+                    </h2>
+                    <dl id="Descriptions.other"></dl>
+            </div>
 
             </div>
             <br clear="all" />
