adding lots of data to the page. not sure we want all, but now its there

--- a/artskart.html
+++ b/artskart.html
@@ -125,13 +125,12 @@
                     <span id="zip.appender.en" lang="en"></span>
                 </p>
             </div>
+
             <div class="section inlinesection">
                 <div class="img-container">
                     <span id="img.appender" class="sectionimage"></span>
                     <span id="img.source" class="img-source-container"></span>
                 </div>
-
-                <div id="geoLocationBox"></div>
 
                 <div id="tags_other">
                     <h2 >
@@ -174,6 +173,38 @@
                 </ul>
             </div>
         </div>
+
+        <div class="section">
+            <div id="Stats">
+                <h2>
+                    <span lang="nb"> Statistikk </span>
+                    <span lang="nn"> Statistikk </span>
+                    <span lang="en"> Statistics </span>
+                </h2>
+                <dl id="Statistics"></dl>
+        </div>
+
+        <div class="section">
+            <div id="Types">
+                <h2>
+                    <span lang="nb"> Typer </span>
+                    <span lang="nn"> Typer </span>
+                    <span lang="en"> Types </span>
+                </h2>
+                <dl id="Types.appender"></dl>
+        </div>
+
+        <div class="section">
+            <div id="File">
+                <h2>
+                    <span lang="nb"> Fildata </span>
+                    <span lang="nn"> Fildata </span>
+                    <span lang="en"> Files </span>
+                </h2>
+                <dl id="FileInfo"></dl>
+                <!--<dl id="GeneralData"></dl> Not really in use-->
+        </div>
+
 
         <div class="section">
             <h2>
